--- a/libs/design-system/package.json
+++ b/libs/design-system/package.json
@@ -2,6 +2,10 @@
     "name": "@alura/design-system",
     "version": "1.0.0",
     "main": "index.js",
-    "license": "MIT"
+    "license": "MIT",
+    "dependencies": {
+      "@alura/tsconfig-commons": "*",
+      "@alura/utils": "*"
+    }
   }
   
