--- a/projects/web-public/package.json
+++ b/projects/web-public/package.json
@@ -9,7 +9,9 @@
     "build": "next build"
   },
   "dependencies": {
+    "@alura/tsconfig-commons": "*",
     "@alura/utils": "*",
+    "@alura/design-system": "*",
     "next": "^12.1.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
