--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   ],
   "scripts": {
     "web-public": "yarn workspace @alura/web-public",
-    "dev:web-public": "yarn web-public dev"
+    "dev:web-public": "yarn web-public dev",
+    "lint:web-public": "yarn web-public lint"
   }
 }
