--- a/projects/web-public/package.json
+++ b/projects/web-public/package.json
@@ -6,21 +6,24 @@
   "scripts": {
     "start": "next start",
     "dev": "next dev",
-    "build": "next build"
+    "build": "next build",
+    "lint": "next lint"
   },
   "dependencies": {
+    "eslint": "7.32.0",
+    "@alura/eslint-commons": "*",
     "@alura/tsconfig-commons": "*",
     "@alura/utils": "*",
     "@alura/design-system": "*",
-    "next": "^12.1.5",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "next": "12.1.5",
+    "react": "18.1.0",
+    "react-dom": "18.1.0"
   },
   "devDependencies": {
-    "typescript": "^4.6.4",
-    "@types/node": "^17.0.30",
-    "@types/react": "^18.0.8",
-    "next-compose-plugins": "^2.2.1",
-    "next-transpile-modules": "^9.0.0"
+    "typescript": "4.6.0",
+    "@types/node": "17.0.30",
+    "@types/react": "18.0.8",
+    "next-compose-plugins": "2.2.1",
+    "next-transpile-modules": "9.0.0"
   }
 }
