--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "web-public": "yarn workspace @alura/web-public",
     "dev:web-public": "yarn web-public dev",
     "lint:web-public": "yarn web-public lint"
+  },
+  "devDependencies": {
+    "prettier": "latest"
   }
 }
