--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "private": true,
   "workspaces": [
-    "libs/*",
+    "setup/*",
+    "packages/*",
     "projects/*"
   ],
   "scripts": {
