--- a/projects/web-public/package.json
+++ b/projects/web-public/package.json
@@ -7,6 +7,7 @@
     "start": "next start",
     "dev": "next dev",
     "build": "next build",
+    "test": "jest",
     "lint": "next lint"
   },
   "dependencies": {
@@ -17,11 +18,10 @@
     "react-dom": "18.1.0"
   },
   "devDependencies": {
+    "@alura/test-commons": "*",
     "@alura/eslint-commons": "*",
     "@alura/tsconfig-commons": "*",
     "eslint": "7.32.0",
-    "@types/node": "17.0.30",
-    "@types/react": "18.0.8",
     "next-compose-plugins": "2.2.1",
     "next-transpile-modules": "9.0.0",
     "typescript": "4.5.5"
