--- a/setup/eslint-commons/package.json
+++ b/setup/eslint-commons/package.json
@@ -7,6 +7,7 @@
     "base.js"
   ],
   "dependencies": {
+    "eslint-plugin-jest": "26.1.5",
     "eslint-config-next": "12.0.8",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
