--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "dependencies": {
-    "@alura/tsconfig-commons": "*"
+  "scripts": {
+    "test": "jest"
+  },
+  "devDependencies": {
+    "@alura/tsconfig-commons": "*",
+    "@alura/test-commons": "*"
   }
 }
