--- a/projects/web-public/package.json
+++ b/projects/web-public/package.json
@@ -15,11 +15,12 @@
     "@alura/utils": "*",
     "next": "12.1.5",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
-    "@alura/test-commons": "*",
     "@alura/eslint-commons": "*",
+    "@alura/test-commons": "*",
     "@alura/tsconfig-commons": "*",
     "eslint": "7.32.0",
     "next-compose-plugins": "2.2.1",
