--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prettier": "latest",
     "@types/jest": "27.4.1",
     "@types/node": "17.0.30",
-    "@types/react": "18.0.8"
+    "@types/react": "18.0.8",
+    "@types/styled-components": "5.1.25"
   }
 }
