--- a/projects/web-public/package.json
+++ b/projects/web-public/package.json
@@ -15,7 +15,8 @@
     "@alura/utils": "*",
     "next": "12.1.5",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "styled-components": "5.3.5"
   },
   "devDependencies": {
     "@alura/eslint-commons": "*",
