--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
   "main": "index.js",
   "license": "MIT",
   "private": true,
-  "workspaces": [
-    "setup/*",
-    "packages/*",
-    "projects/*"
-  ],
+  "workspaces": {
+    "packages": [
+      "setup/*",
+      "packages/*",
+      "projects/*"
+    ],
+    "nohoist": [
+      "eslint/**"
+    ]
+  },
   "scripts": {
+    "test": "yarn workspaces run test",
+    "lint": "yarn workspaces run lint",
     "web-public": "yarn workspace @alura/web-public",
     "dev:web-public": "yarn web-public dev",
     "lint:web-public": "yarn web-public lint",
@@ -25,6 +32,7 @@
   },
   "devDependencies": {
     "prettier": "latest",
+    "eslint": "7.32.0",
     "@types/jest": "27.4.1",
     "@types/node": "17.0.30",
     "@types/react": "18.0.8",
