--- a/projects/web-public/package.json
+++ b/projects/web-public/package.json
@@ -24,6 +24,7 @@
     "@alura/tsconfig-commons": "*",
     "next-compose-plugins": "2.2.1",
     "next-transpile-modules": "9.0.0",
-    "typescript": "4.5.5"
+    "typescript": "4.5.5",
+    "eslint-plugin-jest": "26.1.5"
   }
 }
