--- a/projects/web-public/package.json
+++ b/projects/web-public/package.json
@@ -8,7 +8,7 @@
     "dev": "next dev",
     "build": "next build",
     "test": "jest",
-    "lint": "next lint"
+    "lint": "eslint './**/*.{ts,tsx}'"
   },
   "dependencies": {
     "@alura/design-system": "*",
@@ -19,6 +19,7 @@
     "styled-components": "5.3.5"
   },
   "devDependencies": {
+    "eslint": "7.32.0",
     "@alura/eslint-commons": "*",
     "@alura/test-commons": "*",
     "@alura/tsconfig-commons": "*",
