--- a/setup/eslint-commons/package.json
+++ b/setup/eslint-commons/package.json
@@ -10,7 +10,7 @@
     "test": "echo 'Not implemented'",
     "lint": "echo 'Not implemented'"
   },
-  "devDependencies": {
+  "dependencies": {
     "eslint-plugin-jest": "26.1.5",
     "eslint-config-next": "12.0.8",
     "eslint-config-prettier": "8.3.0",
