--- a/setup/eslint-commons/package.json
+++ b/setup/eslint-commons/package.json
@@ -11,6 +11,7 @@
     "lint": "echo 'Not implemented'"
   },
   "dependencies": {
+    "jest": "27.0.0",
     "eslint-plugin-jest": "26.1.5",
     "eslint-config-next": "12.0.8",
     "eslint-config-prettier": "8.3.0",
