--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -4,7 +4,7 @@
     "main": "index.js",
     "license": "MIT",
     "scripts": {
-      "lint": "eslint",
+      "lint": "eslint './**/*.{ts,tsx}'",
       "test": "jest"
     },
     "dependencies": {
