--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "test": "jest",
-    "lint": "eslint"
+    "lint": "eslint './**/*.{ts,tsx}'"
   },
   "devDependencies": {
     "@alura/tsconfig-commons": "*",
