--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "test:design-system": "yarn design-system test"
   },
   "devDependencies": {
+    "eslint": "7.32.0",
     "prettier": "latest",
     "@types/jest": "27.4.1",
     "@types/node": "17.0.30",
