--- a/projects/web-public/package.json
+++ b/projects/web-public/package.json
@@ -23,7 +23,6 @@
     "@alura/test-commons": "*",
     "@alura/tsconfig-commons": "*",
     "next-compose-plugins": "2.2.1",
-    "next-transpile-modules": "9.0.0",
-    "typescript": "4.5.5"
+    "next-transpile-modules": "9.0.0"
   }
 }
